gcc/testsuite/rust.test/compilable/integer_inference_var4.rs
fn main() {
    let a;
    a = 1;
}
