gcc/testsuite/rust.test/fail_compilation/missing_return1.rs
fn test1() -> i32 {}

fn main() {
    let call1 = test1();
}
